--- a/style.css
+++ b/style.css
@@ -18,26 +18,29 @@ body{
         #ff512f 100%
     );
     color: #fff;
-    padding: 9px;
+    padding: 5px 30px;
     border: none;
-    border-radius: 6px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .container{
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
-
 }
 
 .navbar{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    background-color: white;
+    padding: 2px 9px;
+    box-shadow: 0 10px 10px -12px rgba(0, 0, 0, 0.25);
 }
 
 .navbar__brand{
-    width: 100px;
+    width: 90px;
 }
 
 .navbar__logo{
@@ -46,47 +49,109 @@ body{
 
 .hero__container{
     width: 100%;
+    padding: 10px 10px;
 }
 
 .hero__image__container{
     width: 100%;
+    position: relative;
 }
 
 .hero__image{
     width: 100%;
+    position: relative;
+    z-index: 2;
+    top: 40px;
+    left: auto;
+    border-radius: 7px;
+    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+}
+
+.hero__description{
+    width: 100%;
+    margin: 80px 0;
+    padding: 0 7px;
+}
+
+.hero__text{
+    font-size: 30px;
+    color: #1d3557;
+    margin: 5px 0;
+}
+
+.hero__bg__pattern{
+    width: 100%;
+    position: absolute;
+    top: 15px;
+    left: 0;
+}
+
+.hero__shape{
+    width: 100%;
+    position: absolute;
+    top: 15px;
+    left: 5px;
+}
+
+/* Menu Styles */
+.food__menu__card{
+    width: 100%;
+}
+
+.food__image{
+    width: 100%;
 }
 
 @media(min-width: 768px){
+    .container{
+        padding: 0 8px;
+    }
     .navbar{
         justify-content: space-between;
-        padding: 10px 20px;/* top&bottom left&right */
+        padding: 0 10px;/* top&bottom left&right */
     }
     .navbar__brand{
-        width: 150px;
+        width: 100px;
     }
     .button__primary{
-        padding: 20px;
-        font-size: 20px;
+        padding: 8px 10px;
+        font-size: 13px;
     }
     .hero__container{
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
         justify-content: space-between;
-        gap: 10px;
+    }
+    .hero__image__container{
+        width: 150%;
+    }
+    .hero__text{
+        font-size: 30px;
+        font-weight: 900;
     }
 }
 
 @media(min-width: 1020px){
-    .container{
-        max-width: 1010px;
-    }
     .hero__image__container{
-        width: 500px;
-        height: 500px;
+        max-width: 100%;
+    }
+    .hero__text{
+        font-size: 30px;
+    }
+    .navbar{
+        padding: 0 10px;
     }
 }
 
 @media(min-width: 1400px){
-
+    .container{
+        max-width: 1300px;
+    }
+    .navbar{
+        padding: 0 3rem;
+    }
+    .hero__text{
+        font-size: 40px;
+    }
 }
