--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 
 .hero__container{
     width: 100%;
-    padding: 10px 10px;
+    padding: 0 10px;
 }
 
 .hero__image__container{
@@ -94,12 +94,33 @@ body{
 }
 
 /* Menu Styles */
+
+.explore__menu__text{
+    font-size: 30px;
+    color: #1d3557;
+    margin: 5px 0;
+    text-align: center;
+}
+
 .food__menu__card{
     width: 100%;
+    background-color: #fff;
+    border-radius: 8px;
+    margin-bottom: 15px;
 }
 
 .food__image{
     width: 100%;
+    border-radius: 8px 8px 0 0;
+}
+
+.food__menu__card__description{
+    padding: 15px;
+}
+
+.explore__menu__view__more{
+    display: flex;
+    justify-content: center;
 }
 
 @media(min-width: 768px){
