--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
     width: 100%;
     position: relative;
     z-index: 2;
-    top: 40px;
+    top: 80px;
     left: auto;
     border-radius: 7px;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
@@ -69,14 +69,14 @@ body{
 
 .hero__description{
     width: 100%;
-    margin: 80px 0;
+    margin: 50px 0;
     padding: 0 7px;
 }
 
 .hero__text{
     font-size: 30px;
     color: #1d3557;
-    margin: 5px 0;
+    margin-top: 150px;
 }
 
 .hero__bg__pattern{
@@ -97,16 +97,17 @@ body{
 
 .explore__menu__text{
     font-size: 30px;
+    font-weight: 1000;
     color: #1d3557;
     margin: 5px 0;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .food__menu__card{
     width: 100%;
     background-color: #fff;
     border-radius: 8px;
-    margin-bottom: 15px;
 }
 
 .food__image{
@@ -143,29 +144,77 @@ body{
         flex-direction: row-reverse;
         align-items: center;
         justify-content: space-between;
+        margin-bottom: 120px;
     }
     .hero__image__container{
         width: 150%;
+        top: -30px;
     }
     .hero__text{
         font-size: 30px;
         font-weight: 900;
+    }
+    .hero__image{
+        margin-top: 0px;
+    }
+    .explore__menu__lists{
+        display: flex;
+        gap: 8px;
+        margin-top: 50px;
+    }
+
+    .explore__menu__container{
+        position: relative;
+    }
+    .explore__menu__gradient__bg{
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        z-index: -2;
+        background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #dd2476 51%,
+        #ff512f 100%
+        );
+        transform: skewY(-5deg);
+    }
+
+    #pizza__card{
+        margin-top: -20px;
+        margin-bottom: 30px;
     }
 }
 
 @media(min-width: 1020px){
     .hero__image__container{
         max-width: 100%;
+        margin-top: 30px;
+        margin-bottom: 40px;
     }
     .hero__text{
-        font-size: 30px;
+        font-size: 40px;
     }
     .navbar{
         padding: 0 10px;
     }
+    .explore__menu__lists{
+        gap: 20px;
+        padding: 0 20px;
+    }
+    .explore__menu__text{
+        font-size: 50px;
+    }
 }
 
 @media(min-width: 1400px){
+    .hero__image__container{
+        max-width: 100%;
+        margin-top: 30px;
+        margin-bottom: 60px;
+    }
     .container{
         max-width: 1300px;
     }
@@ -173,6 +222,6 @@ body{
         padding: 0 3rem;
     }
     .hero__text{
-        font-size: 40px;
+        font-size: 50px;
     }
 }
