--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
     width: 100%;
     position: relative;
     z-index: 2;
-    top: 80px;
+    top: 50px;
     left: auto;
     border-radius: 7px;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
@@ -122,6 +122,41 @@ body{
 .explore__menu__view__more{
     display: flex;
     justify-content: center;
+    margin: 20px;
+}
+
+/* Restaurants */
+
+.restaurants_description{
+    font-size: 30px;
+    font-weight: 1000;
+    color: #1d3557;
+    margin: 10px 0;
+    text-align: center;
+}
+.restaurants__flex__row__one, .restaurants__flex__row__two{
+    width: 100%;
+    display: flex;
+    gap: 4px;
+}
+.restaurants__flex__row__one{
+    align-items: baseline;
+    margin-bottom: 4px;
+}
+
+.restaurant__1__image, .restaurant__2__image, .restaurant__3__image, .restaurant__4__image{
+    width: 100%;
+    height: 100%;
+    border-radius: 7px;
+}
+.restaurant__1, .restaurant__4{
+    width: 100%;
+    height: 150px;
+}
+
+.restaurant__2, .restaurant__3{
+    width: 120%;
+    height: 200px;
 }
 
 @media(min-width: 768px){
@@ -160,7 +195,7 @@ body{
     .explore__menu__lists{
         display: flex;
         gap: 8px;
-        margin-top: 50px;
+        margin: 50px;
     }
 
     .explore__menu__container{
@@ -186,6 +221,19 @@ body{
         margin-top: -20px;
         margin-bottom: 30px;
     }
+    .restaurants_description{
+        font-size: 40px;
+        width: 100%;
+    }
+
+    .restaurants__container{
+        display: flex;
+        align-items: center;
+    }
+
+    .restaurants__flex{
+        width: 100%;
+    }
 }
 
 @media(min-width: 1020px){
@@ -207,6 +255,9 @@ body{
     .explore__menu__text{
         font-size: 50px;
     }
+    .restaurants__container{
+        margin-top: 30px;
+    }
 }
 
 @media(min-width: 1400px){
@@ -223,5 +274,12 @@ body{
     }
     .hero__text{
         font-size: 50px;
+    }
+    .restaurants__flex{
+        width: 150%;
+        height: 200%;
+    }
+    .restaurants__container{
+        height: 200%;
     }
 }
