--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ body{
         #ff512f 100%
     );
     color: #fff;
-    padding: 5px 30px;
+    padding: 5px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin: 0 5px;
 }
 
 .container{
@@ -159,6 +160,38 @@ body{
     height: 200px;
 }
 
+/* Stay updated*/
+
+.stay__updated__container{
+    width: 100%;
+    margin: 10px 0;
+}
+
+.stay__updated__text{
+    width: 100%;
+    font-size: 25px;
+    font-weight: 1000;
+    color: #1d3557;
+}
+
+.stay__updated__info{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.stay__updated__email{
+    width: 100%;
+}
+
+.stay__updated__email__input{
+    background-color: rgb(241, 219, 235);
+    border-color: pink;
+    border-radius: 3px;
+    width: 100%;
+}
+
 @media(min-width: 768px){
     .container{
         padding: 0 8px;
@@ -234,6 +267,25 @@ body{
     .restaurants__flex{
         width: 100%;
     }
+
+    .stay__updated__container{
+        width: 100%;
+        margin: 40px 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .stay__updated__text{
+        width: 50%;
+    }
+    .stay__updated__info{
+        width: 50%;
+        justify-content: center;
+    }
+    .stay__updated__button{
+        width: 40%;
+    }
+    
 }
 
 @media(min-width: 1020px){
@@ -258,6 +310,9 @@ body{
     .restaurants__container{
         margin-top: 30px;
     }
+    .stay__updated__button{
+        width: 27%;
+    }
 }
 
 @media(min-width: 1400px){
@@ -281,5 +336,8 @@ body{
     }
     .restaurants__container{
         height: 200%;
+    }
+    .stay__updated__button{
+        width: 20%;
     }
 }
