--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ body{
     width: 100%;
     height: 100%;
     border-radius: 7px;
+    box-shadow: 0 10px 10px -12px rgba(0, 0, 0, 0.25);
 }
 .restaurant__1, .restaurant__4{
     width: 100%;
@@ -216,6 +217,33 @@ body{
     border-radius: 7px;
 }
 
+/* Footer */
+
+.footer__contents{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-image: linear-gradient(
+        to right,
+        #ff512f 0%,
+        #dd2476 51%,
+        #ff512f 100%
+    );
+    padding: 2px 9px;
+}
+
+.footer__logo__image{
+    width: 150px;
+    filter: brightness(0) invert(1);
+    opacity: 95%;
+}
+
+.footer__items__text{
+    color: white;
+    opacity: 95%;
+    font-size: 10px;
+    font-weight: 300;
+}
 
 @media(min-width: 768px){
     .container{
@@ -279,6 +307,7 @@ body{
         margin-top: -20px;
         margin-bottom: 30px;
     }
+    
     .restaurants_description{
         font-size: 40px;
         width: 100%;
@@ -339,6 +368,9 @@ body{
     .hero__text{
         font-size: 40px;
     }
+    .hero__image{
+        top: 80px;
+    }
     .navbar{
         padding: 0 10px;
     }
@@ -348,9 +380,10 @@ body{
     }
     .explore__menu__text{
         font-size: 50px;
+        margin-top: 90px;
     }
     .restaurants__container{
-        margin-top: 30px;
+        margin: 30px 20px;
     }
     .stay__updated__button{
         width: 27%;
@@ -372,6 +405,9 @@ body{
     .navbar{
         padding: 0 3rem;
     }
+    .navbar__brand{
+        width: 120px;
+    }
     .hero__text{
         font-size: 50px;
     }
@@ -381,15 +417,20 @@ body{
     }
     .restaurants__container{
         height: 200%;
+        margin: 30px 200px;
     }
     .stay__updated__container{
         margin: 50px 0;
     }
     .stay__updated__text{
+        width: 50%;
         font-size: 35px;
     }
     .stay__updated__button{
-        width: 20%;
+        width: 14%;
+    }
+    .stay__updated__info{
+        width: 50%;
     }
     .quote__container{
         margin: 70px 0;
@@ -397,5 +438,12 @@ body{
     .quote__text{
         top: 80px;
         font-size: 30px;
+    }
+    .footer__logo__image{
+        width: 300px;
+    }
+    
+    .footer__items__text{
+        font-size: 16px;
     }
 }
